refactor: 코드 간결화 리펙터링